# ai-context-gen

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  RELEASE.md  build.sh  context.md  example_context.json  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  version-check.yml
examples/: advanced_usage.rs  basic_usage.rs
src/: config.rs  generator.rs  lib.rs  main.rs  parser.rs  scanner.rs  token_counter.rs
