[package]
name = "ai-context-gen"
version = "0.1.1"
edition = "2021"
rust-version = "1.76"
authors = ["Bruno Tavares <brbtavares@outlook.com>"]
description = "A context generator for Rust repositories that creates structured markdown files with relevant information for LLMs and AI agents"
readme = "README.md"
homepage = "https://github.com/brbtavares/ai-context-gen"
repository = "https://github.com/brbtavares/ai-context-gen"
license = "MIT"
keywords = ["context", "generator", "llm", "ai", "rust"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
exclude = [
    "target/*",
    ".git/*",
    ".vscode/*",
    "*.md",
    "examples/*"
]

[[bin]]
name = "ai-context-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
tiktoken-rs = "0.5"
anyhow = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.tokio]
version = "1.0"
features = ["full"]
